--- a/src/PersonnelInfo.UIs/PersonnelInfo.Mvc/Views/Employee/Index.cshtml
+++ b/src/PersonnelInfo.UIs/PersonnelInfo.Mvc/Views/Employee/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using PersonnelInfo.Core.DTOs.Entities.Employees
+@using PersonnelInfo.Mvc.DTOs.Entities.Employees
 @model IEnumerable<EmployeeDto>
 
 @{
